syntax = "proto3";
package pb;

message Empty {}

message IncrRequest {
  string event = 1;  // which event happened
  int64 times = 2;  // how many times to increase by
}

message GetRequest {
  string event = 1;  // which event to get for
}

message GetReply {
  int64 count = 1;  // the count of the event
}

message GetAllReply {
  map<string, int64> counts = 1;  // the count of each event hold in this node
}

message Node {
  string name = 1;
  string addr = 2;
  int32 port = 3;
}

message NodesReply {
  repeated Node nodes = 1;  // the state of the cluster, where this node located
}

service CTRD {
  // Incr increases event by the given times
  rpc Incr (IncrRequest) returns (Empty) {}

  // Get shows the count of the given event
  rpc Get (GetRequest) returns (GetReply) {}

  // Get shows the count of each event hold in this node
  rpc GetAll (Empty) returns (GetAllReply) {}

  // Nodes shows the state of the cluster, where this node located
  rpc Nodes (Empty) returns (NodesReply) {}
}
